# omnimod

./: Cargo.toml
res/: hello.lua
src/: main.rs
